# clog

./: Makefile  README.md  cli.py  pyproject.toml
plog/: __init__.py  cli.py  editor.py
tests/: test_plog.py
